[gd_scene load_steps=8 format=3 uid="uid://cdi4i23l4oryo"]

[ext_resource type="Script" path="res://scripts/naagmandir_wheel.gd" id="1_6j34v"]
[ext_resource type="Texture2D" uid="uid://d3wtwfwd1s6cj" path="res://assets/interactables/NaagMandirWheelStand.png" id="2_wrs4y"]
[ext_resource type="Texture2D" uid="uid://50ihgxvc282d" path="res://assets/interactables/NaagmandirWheel.png" id="3_j1ven"]

[sub_resource type="Animation" id="Animation_krqj1"]
resource_name = "rotateWheel"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wheel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 2.75413]
}

[sub_resource type="Animation" id="Animation_x0cux"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wheel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bpj5l"]
_data = {
"RESET": SubResource("Animation_x0cux"),
"rotateWheel": SubResource("Animation_krqj1")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_r3vo7"]
radius = 185.648

[node name="NaagmandirWheel" type="Node2D"]
script = ExtResource("1_6j34v")

[node name="WheelStand" type="Sprite2D" parent="."]
position = Vector2(0, 68)
texture = ExtResource("2_wrs4y")

[node name="Wheel" type="Sprite2D" parent="."]
texture = ExtResource("3_j1ven")

[node name="naagmandirWheelPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bpj5l")
}

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_r3vo7")
debug_color = Color(0.554063, 0.496394, 0.70712, 0.42)

[connection signal="animation_finished" from="naagmandirWheelPlayer" to="." method="_on_naagmandir_wheel_player_animation_finished"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
